# skillforge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN.md  README.md  SCHEMA.md  SPEC.md  pyproject.toml  railway.toml  solution.py
.claude/: launch.json  settings.json
.github/workflows/: ci.yml
bible/: README.md  book-of-elixir.md  book-of-genesis.md  evolution-log.md
bible/findings/: 001-pipeline-composition-traits-yield-the-hi.md  002-defensive-traits-anti-pattern-guard-side.md  003-decision-structure-traits-decision-table.md  004-classification-before-action-traits-clas.md  005-the-co-occurrence-of-generator-vs-list-d.md  006-validation-traits-validate-before-presen.md  007-flat-minimal-document-structure-outperfo.md  008-explaining-rationale-why-rather-than-jus.md  009-quickstart-examples-must-be-independentl.md  010-test-gating-logic-requiring-tests-to-pas.md  011-safety-net-constraints-that-are-mandator.md  012-traits-focused-on-upfront-analysis-befor.md
bible/patterns/: descriptions.md  instructions.md  progressive-disclosure.md  scripts.md  structural.md
design/: DIGEST.md  README.md  anthropic-design-system.md
docs/: clean-code.md  eval-queries-template.json  golden-template.md  how-skillforge-works.md  seed-research-report.md  skills-research.md
docs/golden-template/: SKILL.md
docs/research/: elixir-llm-pain-points.md
frontend/: .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
journal/: 001-project-kickoff.md  002-scaffolding-and-plan.md  003-overnight-run-begins.md  004-post-mvp-polish-and-v1-1-push.md  005-v1-1-landing.md  006-lockdown-deploy-crucible-and-the-managed-agents-pivot.md  007-managed-agents-port-phase-1.md  008-qa-session-pipeline-observability.md  009-atomic-evolution-and-the-v2-vision.md  010-phase-1-landing.md  011-atomic-evolution-port-phases-2-5.md  012-skld-bench-authoring.md  013-phoenix-liveview-install-test.md  014-seed-runs-and-the-scoring-crisis.md  015-scoring-overhaul-and-frontend-sprint.md  016-atomic-pipeline-and-engine-integration.md  017-clean-code-overhaul.md
journal/data/: 007-step0-smoke-burst.txt  007-step0-smoke-session.txt  007-step1-e2e-final-pass.txt
plans/: BACKLOG.md  PLAN-SKLDbench.md  PLAN-V1.1.md  PLAN-V1.2.md  PLAN-V2.0-CONCEPT.md  PLAN-V2.0.md  PLAN-V2.1.3.md  PLAN-V2.1.md  PLAN.md  PROGRESS.md  SPEC-V2.0.md
plans/archived/: PLAN-V1.1.md  PLAN-V2.1.2.md  PLAN-V2.1.md
run-dumps/: run-bible.json  run-multi.json  run-test-001.json
scripts/: export_benchmark_results.py  smoke_managed_e2e.py  smoke_skill_upload.py
scripts/analysis/: classify_challenges.py
scripts/benchmark/: benchmark_report.py  run_benchmark.py  run_benchmark_cli.py  run_skill_benchmark.py
scripts/mock_pipeline/: NEXT-SEED-RUN-PLAYBOOK.md  backfill_competition_scores.py  backfill_vevo_challenge_ids.py  create_run.py  enrich_package.py  finalize_run.py  (+8 more)
skillforge/: __init__.py  config.py  errors.py  main.py
spec/: SPEC-V2.1.md
tests/: conftest.py  test_agents.py  test_api.py  test_assembly.py  test_atomic_evolution_live.py  test_competitor.py  test_competitor_managed.py  test_config.py  test_db.py  test_db_v2.py  test_engineer.py  test_evolution.py  test_evolution_integration.py  test_evolve_taxonomist_integration.py  test_export.py  test_judge.py  test_judge_attribution.py  test_judge_comparative.py  test_judge_deterministic.py  test_judge_trace.py  test_judge_trigger.py  test_managed_agents.py  test_models.py  test_models_v2.py  test_report.py  test_sandbox.py  test_seeds.py  test_swap_evolve_endpoints.py  test_taxonomist.py  test_taxonomy_api.py  test_taxonomy_queries.py  test_uploads.py  test_variant_evolution.py  test_websocket_integration.py
(+1416 files in other folders)
